--- a/Dockerfile.d12
+++ b/Dockerfile.d12
@@ -24,4 +24,4 @@ RUN curl -LO https://github.com/CESNET/GPUJPEG/releases/download/continuous/\
 GPUJPEG-Linux-all.tar.xz && tar xaf GPUJPEG*tar* && cp -r GPUJPEG/* /usr
 
 COPY *c *cpp *h *hpp *cu Makefile gjtiff/
-RUN cd gjtiff && make -j $(nproc) install
+RUN cd gjtiff && CFLAGS=-DINSIDE_DHR CXXFLAGS=$CFLAGS make -j $(nproc) install
