--- a/Dockerfile.d12c11
+++ b/Dockerfile.d12c11
@@ -24,5 +24,8 @@ RUN git clone https://github.com/rapidsai/cuspatial.git && \
 RUN curl -LOSs https://github.com/CESNET/GPUJPEG/releases/download/continuous/\
 GPUJPEG-Linux-all.tar.xz && tar xaf GPUJPEG*tar* && cp -r GPUJPEG/* /usr
 
-COPY .git *c *cpp *h *hpp *cu *cuh Makefile gjtiff/
+COPY .git gjtiff/.git/
+COPY Makefile gjtiff/
+COPY src gjtiff/src/
+
 RUN cd gjtiff && CFLAGS=-DINSIDE_DHR CXXFLAGS=$CFLAGS make -j $(nproc) install
